2007-02-08 10:05:46  Sean Middleditch <elanthis@awesomeplay.com>

  * Cleanup of Scriptix grammar.
  * Removed foreach statement, for now includes that functionality.
  * Added a basic number iterator loop.  for (var i : amount) and
    for (var i : start, amount).  ex: for (var i : 10) message(i);
    would print 0 through 9.
  * Removed C-style for loop support.
  * Changes Scriptix to no longer user { and } for code blocks.
    If statements are now if/then/elif/else/end blocks, and loops
    require do/end.  Functions don't need any symbols after the
    argument list and require an end symbol at the end.
  * Updated Fileobj format to use %begin and %end for marking
    blocks so as to not conflict with Scriptix.
  * Scriptix globals must be defined with a value now.

2007-02-07 07:53:16  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed support for postop and preop syntax in Scriptix.
    That's the --, ++, +=, *=, etc. operators.  This cut out over a
    hundred lines from the compiler and removed all of our remaining
    Bison grammar errors.  The performance and expressiveness loss
    we pay is completely negligable.

2007-02-07 07:28:44  Sean Middleditch <elanthis@awesomeplay.com>

  * Calendar file format now uses TabReader format instead of
    FileObject.
  * Updated FileObject format require a namespace and name for
    every attribute.
  * New easier to read and write help file format.  Along with
    its own crappy poorly written parser.
  * Fixed default help command to show help topic 'general' if
    not topic is specified.

2007-02-05 06:18:03  Sean Middleditch <elanthis@awesomeplay.com>

  * Build fixes; no clue how I got things to build and run before.
    Yay C++.

2007-02-04 07:59:59  Sean Middleditch <elanthis@awesomeplay.com>

  * Scriptix initialization no longer uses the static TypeDef
    structures, but instead relies on the type and method
    registration functions called from initializations routines.