@@ -2,7 +2,6 @@ account.name = "Administrator"
 account.email = "awemud@localhost"
 account.passphrase = "$1$tNUNjzkD$F.tONxYNdR8hpYwuekqr7/"
 account.character = "Admin"
-account.character = "Sean"
 account.created = "2000-01-01 00:00:00"
 account.lastlogin = "2007-02-08 04:07:30"
 account.access = "gm"
